updating latest changes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,6 +50,9 @@
 		    	<li ng-class="{ active: $state.includes('webSql') }">
 		    		<a href="#/webSql">Web SQL</a>
 		    	</li>
+		    	<li ng-class="{ active: $state.includes('indexedDb') }">
+		    		<a href="#/indexedDb">Indexed DB</a>
+		    	</li>
 		    </ul>
 		    <ul class="nav pull-right">
 				<li class="divider-vertical"></li>
