--- a/src/main/webapp/webSql.html
+++ b/src/main/webapp/webSql.html
@@ -1,2 +1,59 @@
-<p>{{message}}</p>
+<div class="row-fluid">
+	<div class="span10">
+		<b>Query : &nbsp;&nbsp;&nbsp;</b>
+		<textarea class="span11" rows="3" ng-model="query"></textarea>
+	</div>
+	<div class="span2">
+		<button class="btn btn-mini pull-left" ng-click="query = ''">
+			<i class="icon-remove"></i>&nbsp;&nbsp;Clear
+		</button>
+		<br/>
+		<span>&nbsp;&nbsp;</span>
+		<br/>
+		<button class="btn btn-mini btn-primary" ng-click="run()">
+			<i class="icon-play-circle"></i>&nbsp;&nbsp;Run&nbsp;&nbsp;
+		</button>
+	</div>
+</div>
+<div class="row-fluid">
+	<label class="span1"><b>Recent Queries</b></label>
+	<select class="span11" ng-model="query" ng-options="recentQuery for recentQuery in recentQueries">
+	</select>
+</div>
 
+<tabs>
+	
+	<pane heading="Result" active="tabs.result">
+	<div>
+		<table class="table table-striped table-condensed table-hover table-bordered">
+		<thead>
+		<tr>
+			<th width="30">#</th>
+	    	<th ng-repeat="column in columns">
+	    		{{ column.charAt(0).toUpperCase() + column.slice(1) }}
+	  		</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr ng-repeat="record in records">
+			<td>{{$index + 1}}</td>
+			<td ng-repeat="column in columns">{{record[column]}}</td>
+		</tr>
+		</tbody>
+		</table>
+	</div>
+	</pane>
+	
+	<pane heading="Console" active="tabs.console">
+	<div>
+		<pre>{{message}}</pre>
+	</div>
+	</pane>
+	
+	<pane heading="Sample Sql's" active="tabs.help">
+	<div>
+		<ng-include src="'webSql.sampleSql.html'"></ng-include>
+	</div>
+	</pane>
+	
+</tabs>
