--- a/src/main/webapp/webSql.html
+++ b/src/main/webapp/webSql.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 	<div class="span10">
 		<b>Query : &nbsp;&nbsp;&nbsp;</b>
-		<textarea class="span11" rows="3" ng-model="query"></textarea>
+		<textarea class="span11" rows="3" placeholder="select * from employee" ng-model="query"></textarea>
 	</div>
 	<div class="span2">
 		<button class="btn btn-mini pull-left" ng-click="query = ''">
