--- a/src/main/webapp/alert.html
+++ b/src/main/webapp/alert.html
@@ -1,7 +1,27 @@
+<div class="container">
+<div class="row">
+	<div class="span11">
+		<alerts></alerts>
+	</div>
+	<div class="span1">
+		<button class="btn btn-link pull-right" ng-show="alerts.messages.length > 1" ng-click="alerts.removeAll()">Clear All</button>
+	</div>
+</div>	
+</div>
+
+<!-- 
 <div class="container" ng-controller="alertController">
-	<alert ng-repeat="alert in alerts" type="alert.type"
-		close="close($index)">{{alert.msg}}</alert>
-	
+
+<div class="row">
+	<div class="span10">
+		<alert ng-repeat="alert in alerts" type="alert.type"
+			close="close($index)">{{alert.msg}}</alert>
+	</div>
+	<div class="span2">
 	<button class="btn btn-link pull-right" ng-show="alerts.length > 1"
 		ng-click="closeAll()">Clear All</button>
 </div>
+		
+</div>
+
+-->
