--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,9 +23,13 @@
 	<script src="assets/js/angular-ui-states.min.js" type="text/javascript"></script>
 	<script src="assets/js/ui-bootstrap-tpls-0.3.0.min.js" type="text/javascript"></script>
 
+	<script src="assets/js/angular-registry.js" type="application/javascript"></script>
+	
 	<script src="assets/js/html5sql.js" type="application/javascript"></script>
 	<script src="assets/js/ztt-ydn.db-0.6.6.js" type="application/javascript"></script>
-	
+
+	<script src="wydAngular.js" type="application/javascript"></script>
+		
 	<script src="filters.js" type="application/javascript"></script>
 	<script src="directives.js" type="application/javascript"></script>
 	<script src="services.js" type="application/javascript"></script>
