updating latest changes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
 	<link href="assets/css/font-webrupee.css" rel="stylesheet">
 	<link href="assets/css/main.css" rel="stylesheet"/>
 
+	<script src="assets/js/underscore-min.js" type="text/javascript"></script>
 	<script src="assets/js/underscore.string.min.js" type="text/javascript"></script>
 	<script src="assets/js/moment.min.js" type="text/javascript"></script>
 
