--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -1,5 +1,10 @@
 <div class="container">
 	 <h4>{{message}}!</h4>
+</div>
+
+<!-- 
+
+<div class="container">
 	 <div class="form-inline well well-small">
 	 	<label>Query : &nbsp;&nbsp;<input type="text" class="span11" ng-model="query" char-limit="50"></label>
 		<pre>Query : {{ query | charLimit : 25}}</pre>
@@ -23,7 +28,6 @@
 	<b>Interpolate eg. </b>{{ ': %VERSION%.' | interpolate }}<br/> 
 </div>
 
-<!-- 
 <div class="form-inline">
 	<label>Alert Message : <input type="text" class="input-xlarge" ng-model="alertMessage"></label>
 	&nbsp;&nbsp;
