--- a/src/main/webapp/webSql.html
+++ b/src/main/webapp/webSql.html
@@ -1,26 +1,38 @@
+<!--
 <div class="row-fluid">
-	<div class="span10">
-		<b>Query : &nbsp;&nbsp;&nbsp;</b>
-		<textarea class="span11" rows="3" placeholder="select * from employee" ng-model="query"></textarea>
-	</div>
-	<div class="span2">
-		<button class="btn btn-mini pull-left" ng-click="query = ''">
-			<i class="icon-remove"></i>&nbsp;&nbsp;Clear
-		</button>
-		<br/>
-		<span>&nbsp;&nbsp;</span>
-		<br/>
+	<div class="alert alert-info">
+		<code>Info : </code>&nbsp;&nbsp;To get start, see the sample sql's tab. Run multiple queries with semicolon(<code>;</code>) as separator. Select queries are skipped in multiple query execution.  
+	</div>			
+</div>
+-->
+<div class="row-fluid">
+	<b>Query : &nbsp;&nbsp;&nbsp;</b>
+	<span class="alert alert-info">
+		<code>Info : </code>&nbsp;&nbsp;To get start, see the sample sql's tab. Run multiple queries with semicolon(<code>;</code>) as separator. Select queries are skipped in multiple query execution.  
+	</span>			
+	<br/><br/>
+	<textarea class="span12" rows="3" placeholder="select * from employee" ng-model="query"></textarea>
+</div>
+<div class="row-fluid">
+	<div class="span4 offset4">
+		<button class="btn btn-mini" disabled="true"><i class="icon-file"></i>&nbsp;&nbsp;Import&nbsp;</button>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<button class="btn btn-mini" disabled="true"><i class="icon-file"></i>&nbsp;&nbsp;Export</button>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<button class="btn btn-mini" ng-click="query = ''"><i class="icon-remove"></i>&nbsp;&nbsp;Clear</button>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<button class="btn btn-mini btn-primary" ng-click="run()">
 			<i class="icon-play-circle"></i>&nbsp;&nbsp;Run&nbsp;&nbsp;
 		</button>
 	</div>
 </div>
-<div class="row-fluid">
+<!-- 
+<div class="row-fluid" ng-show="recentQueries.length > 0">
 	<label class="span1"><b>Recent Queries</b></label>
 	<select class="span11" ng-model="query" ng-options="recentQuery for recentQuery in recentQueries">
 	</select>
 </div>
-
+-->
 <tabs>
 	
 	<pane heading="Result" active="tabs.result">
@@ -47,6 +59,30 @@
 	<pane heading="Console" active="tabs.console">
 	<div>
 		<pre>{{message}}</pre>
+	</div>
+	</pane>
+
+	<pane heading="Recent Queries" active="tabs.recentQueries">
+	<div>
+		<table class="table table-striped table-condensed table-hover table-bordered">
+		<thead>
+		<tr>
+			<th width="50">#</th>
+	    	<th>Query</th>
+	    	<th>&nbsp;</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr ng-repeat="recentQuery in recentQueries">
+			<td>{{$index + 1}}</td>
+			<td>{{recentQuery}}</td>
+			<td width="130">
+				<button class="btn btn-link" ng-click="copyToQueryEditor(recentQuery)">Select</button>
+				<button class="btn btn-link" ng-click="runByQuery(recentQuery)">Run</button>
+			</td>
+		</tr>
+		</tbody>
+		</table>
 	</div>
 	</pane>
 	
