--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,34 +9,35 @@
 	<link href="assets/css/font-webrupee.css" rel="stylesheet">
 	<link href="assets/css/main.css" rel="stylesheet"/>
 
-	<script src="assets/js/underscore-min.js" type="text/javascript"></script>
-	<script src="assets/js/underscore.string.min.js" type="text/javascript"></script>
-	<script src="assets/js/moment.min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/moment.min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/underscore-min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/underscore.string.min.js" type="text/javascript"></script>
 
 	<!-- 
-	<script src="assets/js/jquery.min-1.9.1.js" type="text/javascript"></script>
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/jquery.min-1.9.1.js" type="text/javascript"></script>
+	<script src="assets/js/lib/jquery.min-2.0.0.js" type="text/javascript"></script>
+	<script src="assets/js/lib/bootstrap.min.js" type="text/javascript"></script>
 	-->
 
-	<script src="assets/js/angular.min.js" type="text/javascript"></script>
-	<script src="assets/js/angular-resource.min.js" type="text/javascript"></script>
-	<script src="assets/js/angular-ui-utils.min.js" type="text/javascript"></script>
-	<script src="assets/js/angular-ui-states.min.js" type="text/javascript"></script>
-	<script src="assets/js/ui-bootstrap-tpls-0.3.0.min.js" type="text/javascript"></script>
-
-	<script src="assets/js/angular-registry.js" type="application/javascript"></script>
+	<script src="assets/js/lib/angular.min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/angular-resource.min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/angular-ui-utils.min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/angular-ui-states.min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/ui-bootstrap-tpls-0.3.0.min.js" type="text/javascript"></script>
+	<script src="assets/js/lib/angular-registry.js" type="application/javascript"></script>
+	<script src="assets/js/lib/angular-underscore.js" type="application/javascript"></script>
 	
-	<script src="assets/js/html5sql.js" type="application/javascript"></script>
-	<script src="assets/js/ztt-ydn.db-0.6.6.js" type="application/javascript"></script>
+	<script src="assets/js/lib/html5sql.js" type="application/javascript"></script>
+	<script src="assets/js/lib/ztt-ydn.db-0.6.6.js" type="application/javascript"></script>
 
-	<script src="wydAngular.js" type="application/javascript"></script>
+	<script src="assets/js/wydAngular.js" type="application/javascript"></script>
 		
-	<script src="filters.js" type="application/javascript"></script>
-	<script src="directives.js" type="application/javascript"></script>
-	<script src="services.js" type="application/javascript"></script>
-	<script src="controllers.js" type="application/javascript"></script>
-	<script src="routers.js" type="application/javascript"></script>
-	<script src="main.js" type="application/javascript"></script>
+	<script src="assets/js/filters.js" type="application/javascript"></script>
+	<script src="assets/js/directives.js" type="application/javascript"></script>
+	<script src="assets/js/services.js" type="application/javascript"></script>
+	<script src="assets/js/controllers.js" type="application/javascript"></script>
+	<script src="assets/js/routers.js" type="application/javascript"></script>
+	<script src="assets/js/main.js" type="application/javascript"></script>
 </head>
 <body>
 
