--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,43 +1,20 @@
-<html lang="en" ng-app="app" ng-csp>
+<html lang="en" data-ng-app="app" data-ng-csp>
 <head>
 	<title>Browser Console</title>
-	
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="GUI client for WebSQL">
+    <meta name="author" content="Eialarasu">
 	
 	<link href="assets/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/font-webrupee.css" rel="stylesheet">
-	<link href="assets/css/main.css" rel="stylesheet"/>
+	<link href="css/main.css" rel="stylesheet"/>
 
-	<script src="assets/js/lib/moment.min.js" type="text/javascript"></script>
-	<script src="assets/js/lib/underscore-min.js" type="text/javascript"></script>
-	<script src="assets/js/lib/underscore.string.min.js" type="text/javascript"></script>
-
-	<!-- 
-	<script src="assets/js/lib/jquery.min-1.9.1.js" type="text/javascript"></script>
-	<script src="assets/js/lib/jquery.min-2.0.0.js" type="text/javascript"></script>
-	<script src="assets/js/lib/bootstrap.min.js" type="text/javascript"></script>
-	-->
-
-	<script src="assets/js/lib/angular.min.js" type="text/javascript"></script>
-	<script src="assets/js/lib/angular-resource.min.js" type="text/javascript"></script>
-	<script src="assets/js/lib/angular-ui-utils.min.js" type="text/javascript"></script>
-	<script src="assets/js/lib/angular-ui-states.min.js" type="text/javascript"></script>
-	<script src="assets/js/lib/ui-bootstrap-tpls-0.3.0.min.js" type="text/javascript"></script>
-	<script src="assets/js/lib/angular-registry.js" type="application/javascript"></script>
-	<script src="assets/js/lib/angular-underscore.js" type="application/javascript"></script>
-	
-	<script src="assets/js/lib/html5sql.js" type="application/javascript"></script>
-	<script src="assets/js/lib/ztt-ydn.db-0.6.6.js" type="application/javascript"></script>
-
-	<script src="assets/js/wydAngular.js" type="application/javascript"></script>
-		
-	<script src="assets/js/filters.js" type="application/javascript"></script>
-	<script src="assets/js/directives.js" type="application/javascript"></script>
-	<script src="assets/js/services.js" type="application/javascript"></script>
-	<script src="assets/js/controllers.js" type="application/javascript"></script>
-	<script src="assets/js/routers.js" type="application/javascript"></script>
-	<script src="assets/js/main.js" type="application/javascript"></script>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 <body>
 
@@ -49,27 +26,21 @@
 					<a class="brand" href="#"><strong>Browser Console</strong></a>
 				</li>
 		    	<li class="divider-vertical"></li>
-		    	<li ng-class="{ active: $state.includes('home') }">
+		    	<li data-ng-class="{ active: $state.includes('home') }">
 		    		<a href="#/home"><i class="icon-home icon-white"></i></a>
 		    	</li>
 		    	<li class="divider-vertical"></li>
-		    	<li ng-class="{ active: $state.includes('webSql') }">
+		    	<li data-ng-class="{ active: $state.includes('webSql') }">
 		    		<a href="#/webSql">Web SQL</a>
 		    	</li>
 		    </ul>
-		    <ul class="nav pull-right">
-				<li class="divider-vertical"></li>
-				<li>
-					<li ng-class="{ active: $state.includes('about') }"><a href="#/about">About</a>
-				</li>
-			</ul>
 		</div>
 	</div>
 </div>
 
-<ng-include src="'alert.html'"></ng-include>
+<ng-include src="'partials/alert.html'"></ng-include>
 
-<div class="container" ui-view="viewA"></div>
+<div class="container" data-ui-view="viewA"></div>
 
 <br/><br/>
 
@@ -79,5 +50,31 @@
 	$stateParams = {{$stateParams}}
 </pre>
 -->
+
+<script src="assets/lib/modernizr.min.js" type="text/javascript"></script>
+<script src="assets/lib/moment.min.js" type="text/javascript"></script>
+<script src="assets/lib/underscore-min.js" type="text/javascript"></script>
+<script src="assets/lib/underscore.string.min.js" type="text/javascript"></script>
+
+<script src="assets/lib/angular.min.js" type="text/javascript"></script>
+<script src="assets/lib/angular-resource.min.js" type="text/javascript"></script>
+<script src="assets/lib/angular-ui-utils.min.js" type="text/javascript"></script>
+<script src="assets/lib/angular-ui-states.min.js" type="text/javascript"></script>
+<script src="assets/lib/ui-bootstrap-tpls-0.3.0.min.js" type="text/javascript"></script>
+<script src="assets//lib/angular-underscore.js" type="application/javascript"></script>
+
+<script src="assets/lib/angular-webstorage.js" type="text/javascript"></script>
+<script src="assets/lib/html5sql.js" type="application/javascript"></script>
+<script src="assets/lib/ztt-ydn.db-0.6.6.js" type="application/javascript"></script>
+
+<script src="js/wydAngular.js" type="application/javascript"></script>
+	
+<script src="js/filters.js" type="application/javascript"></script>
+<script src="js/directives.js" type="application/javascript"></script>
+<script src="js/services.js" type="application/javascript"></script>
+<script src="js/controllers.js" type="application/javascript"></script>
+<script src="js/routers.js" type="application/javascript"></script>
+<script src="js/main.js" type="application/javascript"></script>
+
 </body>
 </html>
