updating latest changes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ app.controller('mainController', function($scope, $log) {
 	}
 	else {
 		$scope.message = 'Your browser doesn\'t have support to run this app...!';
-		$scope.btnState = 'btn-inverse';
+		$scope.btnState = 'btn-danger';
 		$scope.launchPath = '#';
 	}
 });
