--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,8 @@
 	<link href="assets/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/font-webrupee.css" rel="stylesheet">
+	<link href="assets/css/prettify.css" rel="stylesheet" />
+	
 	<link href="css/main.css" rel="stylesheet"/>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -16,7 +18,7 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
-<body>
+<body onload="prettyPrint()">
 
 <div class="navbar navbar-inverse navbar-fixed-top">
 	<div class="navbar-inner">
@@ -55,6 +57,7 @@
 <script src="assets/lib/moment.min.js" type="text/javascript"></script>
 <script src="assets/lib/underscore-min.js" type="text/javascript"></script>
 <script src="assets/lib/underscore.string.min.js" type="text/javascript"></script>
+<script src="assets/lib/prettify/prettify.js" type="text/javascript"></script>
 
 <script src="assets/lib/angular.min.js" type="text/javascript"></script>
 <script src="assets/lib/angular-resource.min.js" type="text/javascript"></script>
@@ -62,6 +65,9 @@
 <script src="assets/lib/angular-ui-states.min.js" type="text/javascript"></script>
 <script src="assets/lib/ui-bootstrap-tpls-0.3.0.min.js" type="text/javascript"></script>
 <script src="assets//lib/angular-underscore.js" type="application/javascript"></script>
+
+<script src="assets//lib/jquery.min-1.9.1.js" type="application/javascript"></script>
+<script src="assets//lib/bootstrap.min.js" type="application/javascript"></script>
 
 <script src="assets/lib/angular-webstorage.js" type="text/javascript"></script>
 <script src="assets/lib/html5sql.js" type="application/javascript"></script>
