--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<p class="muted">
 	&copy; 2013 vteia.github.io/browserconsole 
 	|
-	Maintained by <a href="http://vteial.github.io/aboutme">Eialarasu</a>
+	Maintained by <a href="http://vteial.github.io/aboutme">Munavar Ali</a>
 	|
 	This app is open source. 
 	Get the <a href="https://github.com/vteial/browserconsole">source on Github</a> or 
